Fix alignment of section descriptions; move book scanning section to bottom of page

--- a/public/css/itp-portfolio.css
+++ b/public/css/itp-portfolio.css
@@ -19,6 +19,7 @@ body {
     max-width: 750px;
     margin: 0 auto 20px;
     font-size: 16px;
+    text-align: left;
 }
 
 .itp-portfolio__pixel-study-video {
@@ -56,6 +57,6 @@ body {
     margin: 12px 0 0;
 }
 
-#creative-coding-sketches {
+#digital-harmony {
     margin-bottom: 150px;
 }
